--- a/function.ipynb
+++ b/function.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f2bbddf3",
+   "id": "1ec1be41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bfc0ff96",
+   "id": "969c4618",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ad4ece59",
+   "id": "77438863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "486883df",
+   "id": "3b45ecd7",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cd96cbd6",
+   "id": "7fe26871",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ba53417a",
+   "id": "0e9f2ce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d8bf521b",
+   "id": "480bfd8d",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4c82ce26",
+   "id": "0b7a4aaa",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "031ad337",
+   "id": "faaba5fe",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c0162072",
+   "id": "c3dfe27b",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "acf05afd",
+   "id": "b153eb46",
    "metadata": {},
    "outputs": [
     {
@@ -228,11 +228,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb2baec0",
+   "execution_count": 43,
+   "id": "7b701428",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garfield\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "first_cat = Cat('Felix')\n",
+    "second_cat = Cat(\"Garfield\")\n",
+    "\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f9309ef7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2a48183c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof! woof!'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "print(first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "09250d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lady\n",
+      "blonde\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'arf! arf!'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_dog = Dog(\"Lady\", \"blonde\", \"arf!\")\n",
+    "print(second_dog.name)\n",
+    "print(second_dog.color)\n",
+    "second_dog.bark()"
+   ]
   }
  ],
  "metadata": {
